adjust input boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ h3 {
   margin: 11px;
 }
 
-#titleScreen, #deathScreen {
+#titleScreen, #deathScreen, #preGameScreen {
   text-align: center;
 }
 
@@ -114,7 +114,9 @@ h3 {
   text-align: center;
 }
 
-#userInput {
+#userInput, #userName {
+  font-family: 'Krub', sans-serif;
+  font-size: calc(50px - 2vh);
   width: 50%;
   text-align: center;
   padding: 5px;
