--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ h3 {
   height: 600px;
   border-style: double;
   padding: 20px;
-  /*overflow: scroll;*/
+  overflow-y: scroll;
   font-family: 'Krub', sans-serif;
   font-size: 20px;
 }
