--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,12 @@ h3 {
   padding: 5px;
   max-height: 200px;
 }
+.monsterImg {
+  max-height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .icon {
   max-height: 30px;
